--- a/verification-rs/Cargo.toml
+++ b/verification-rs/Cargo.toml
@@ -7,6 +7,14 @@ edition = "2021"
 name = "verify_upload_blocks"
 path = "src/bin/verify_upload_blocks.rs"
 
+[[bin]]
+name = "stark_prove"
+path = "src/bin/stark_prove.rs"
+
+[[bin]]
+name = "stark_verify"
+path = "src/bin/stark_verify.rs"
+
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
